# lianghuo-claw

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  package.json  pnpm-lock.yaml
.beads/: .beads-credential-key  config.yaml  metadata.json
ai/: PROGRESS.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/api/v1/routers/: assets.py  exports.py  health.py  projects.py  timelines.py
backend/core/: celery_app.py  config.py  database.py  dependencies.py  logging.py
backend/migrations/: env.py
backend/migrations/versions/: 096016f5e7e7_create_export_tasks_table.py  0d39df645aee_merge_heads.py  19fe960c4538_create_export_tasks_table.py  33407b3f34bf_create_assets_table.py  680ffb3d0404_add_project_timelines_and_export_tasks_.py  a93089a31b33_add_project_model_and_foreign_key_.py
backend/models/: __init__.py  asset.py  export_task.py  project.py  timeline.py
backend/schemas/: asset.py  export.py  project.py  timeline.py
backend/services/: storage.py  ws_manager.py
backend/tasks/: export_project.py  process_asset.py
backend/tests/: test_asset_processing.py  test_export_ffmpeg.py  test_projects.py  test_timeline_operations.py
src/: App.tsx  main.tsx  router.tsx
src/components/Editor/: ExportModal.tsx  TopBar.tsx
src/components/Editor/AssetPanel/: AssetCard.tsx  index.tsx
src/components/Editor/Player/: PlayerControls.tsx  VideoPlayer.tsx
src/components/Editor/PlayerSection/: index.tsx
src/components/Editor/PropertyPanel/: index.tsx
src/components/Editor/Timeline/: TimelineCanvas.tsx  index.tsx
src/hooks/: useAssets.ts  useTimeline.ts  useTimelinePlayback.ts  useTimelineSync.ts
src/lib/: apiPaths.ts  queryKeys.ts
src/pages/Editor/: index.tsx
src/pages/Login/: index.tsx
src/pages/Projects/: index.tsx
src/pages/Register/: index.tsx
src/stores/: assetStore.ts  editorStore.ts  exportStore.ts
src/utils/: frameCache.ts  id.ts  timeline.ts
