[project]
name = "lianghuo-backend"
version = "0.1.0"
description = "lianghuo backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "sqlalchemy==2.*",
    "asyncpg==0.29.*",
    "alembic==1.*",
    "pydantic-settings==2.*",
    "pydantic==2.*",
    "structlog==24.*",
    "sentry-sdk==2.*",
    "redis==5.*",
    "minio==7.*",
    "celery==5.*",
    "flower==2.*",
    "python-multipart==0.0.*",
    "python-jose[cryptography]==3.*",
    "passlib[bcrypt]==1.*",
    "httpx==0.28.*",
    "python-dotenv==1.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.*",
    "pytest-asyncio==0.24.*",
    "black==24.*",
    "ruff==0.9.*",
    "ipython==8.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
project = "."
requires = ["hatchling"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I", "B", "C", "UP", "YTT", "ANN", "S", "COM", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "S106", "S108"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]