[project]
name = "lianghuo-backend"
version = "0.1.0"
description = "lianghuo backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.*",
    "uvicorn[standard]==0.42.*",
    "sqlalchemy==2.*",
    "asyncpg==0.31.*",
    "alembic==1.*",
    "pydantic-settings==2.*",
    "pydantic==2.*",
    "structlog==25.*",
    "sentry-sdk==2.*",
    "redis==7.*",
    "minio==7.*",
    "boto3>=1.35.0,<2.0.0",
    "ffmpeg-python>=0.2.0,<1.0.0",
    "celery==5.*",
    "flower==2.*",
    "python-multipart==0.0.*",
    "python-jose[cryptography]==3.*",
    "passlib[bcrypt]==1.*",
    "httpx==0.28.*",
    "python-dotenv==1.*",
]

[project.optional-dependencies]
dev = [
    "pytest==9.*",
    "pytest-asyncio==1.*",
    "black==26.*",
    "ruff==0.15.*",
    "ipython==9.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "models", "repositories", "schemas", "services", "tasks"]

[tool.uv]
requires = ["hatchling"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "W", "I", "B", "C", "UP", "YTT", "ANN", "S", "COM", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "S106", "S108"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]